--- a/index.ipynb
+++ b/index.ipynb
@@ -404,7 +404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[7]['City'] = 'Pyeongchant'\n",
+    "cities[7]['City'] = 'PyeongChang'\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
